--- a/accueilwindow.ui
+++ b/accueilwindow.ui
@@ -32,7 +32,7 @@
    <string notr="true">background-color: white;</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="label_2">
+   <widget class="QLabel" name="parametrederecherchLink">
     <property name="geometry">
      <rect>
       <x>80</x>
@@ -58,9 +58,9 @@
      <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="styleSheet">
-     <string notr="true">QLabel{color:#656559;
+     <string notr="true">QLabel{color:rgb(85, 166, 217);
 text-decoration :  underline dotted #656559;}
-QLabel:hover{color:black;
+QLabel:hover{color:rgb(0, 255, 127);
 text-decoration :  underline dotted black;}
 </string>
     </property>
@@ -91,7 +91,7 @@ text-decoration :  underline dotted black;}
       <number>9</number>
      </property>
      <item>
-      <widget class="QLabel" name="label_3">
+      <widget class="QLabel" name="sidentifierLink">
        <property name="maximumSize">
         <size>
          <width>100</width>
@@ -111,7 +111,7 @@ text-decoration :  underline dotted black;}
        <property name="styleSheet">
         <string notr="true">QLabel{color: rgb(85, 166, 217);}
 QLabel:hover	{	
-	color: black;
+	color:rgb(0, 255, 127);
 	text-decoration : none;
 }
 QLabel:visited{
@@ -122,16 +122,25 @@ QLabel:visited{
        <property name="text">
         <string>S'identifier</string>
        </property>
+       <property name="textFormat">
+        <enum>Qt::TextFormat::RichText</enum>
+       </property>
        <property name="alignment">
         <set>Qt::AlignmentFlag::AlignCenter</set>
        </property>
        <property name="indent">
         <number>-1</number>
        </property>
+       <property name="textInteractionFlags">
+        <set>Qt::TextInteractionFlag::LinksAccessibleByMouse|Qt::TextInteractionFlag::TextSelectableByMouse</set>
+       </property>
+       <property name="buddy">
+        <cstring></cstring>
+       </property>
       </widget>
      </item>
      <item>
-      <widget class="QRadioButton" name="radioButton">
+      <widget class="QRadioButton" name="darkmodeBtn">
        <property name="cursor">
         <cursorShape>PointingHandCursor</cursorShape>
        </property>
@@ -144,7 +153,7 @@ QLabel:visited{
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="addBookBtn">
        <property name="maximumSize">
         <size>
          <width>30</width>
@@ -166,7 +175,13 @@ QLabel:visited{
         <string/>
        </property>
        <property name="icon">
-        <iconset theme="QIcon::ThemeIcon::ListAdd"/>
+        <iconset theme="mail-message-new"/>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>30</width>
+         <height>20</height>
+        </size>
        </property>
       </widget>
      </item>
@@ -266,7 +281,7 @@ QLabel:visited{
       <number>0</number>
      </property>
      <item>
-      <widget class="QPushButton" name="pushButton_5">
+      <widget class="QPushButton" name="livreBtn">
        <property name="maximumSize">
         <size>
          <width>150</width>
@@ -303,7 +318,7 @@ border: 1px solid #337ab7;
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_4">
+      <widget class="QPushButton" name="articleBtn">
        <property name="maximumSize">
         <size>
          <width>150</width>
@@ -340,7 +355,7 @@ border: 1px solid #337ab7;
      </item>
     </layout>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="soustitreLabel">
     <property name="geometry">
      <rect>
       <x>270</x>
@@ -356,7 +371,7 @@ border: 1px solid #337ab7;
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color:#656559;</string>
+     <string notr="true">color:rgb(109, 109, 109);</string>
     </property>
     <property name="text">
      <string>Libre accès à la connaissance et à la culture.</string>
@@ -406,6 +421,8 @@ border: 1px solid #337ab7;
        </property>
        <property name="styleSheet">
         <string notr="true">QLineEdit:hover{
+color: black;
+background-color: white;
  border: 1px solid rgb(4, 170, 220);
 border-bottom: 2px  solid black;
 border-radius: 6px;
@@ -417,12 +434,18 @@ border-radius: 6px;
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_3">
+      <widget class="QPushButton" name="rechercheBtn">
        <property name="maximumSize">
         <size>
          <width>150</width>
          <height>50</height>
         </size>
+       </property>
+       <property name="font">
+        <font>
+         <family>Arial</family>
+         <pointsize>12</pointsize>
+        </font>
        </property>
        <property name="cursor">
         <cursorShape>PointingHandCursor</cursorShape>
@@ -431,26 +454,23 @@ border-radius: 6px;
         <enum>Qt::ContextMenuPolicy::DefaultContextMenu</enum>
        </property>
        <property name="styleSheet">
-        <string notr="true">QPushButton:hover{color:rgb(0, 255, 127) ;
-	border: 1px solid rgb(3, 185, 221);}</string>
+        <string notr="true">QPushButton:hover{
+border-color: rgb(12, 223, 255);}</string>
        </property>
        <property name="text">
-        <string/>
-       </property>
-       <property name="icon">
-        <iconset theme="QIcon::ThemeIcon::EditFind"/>
+        <string>Recherche</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
-   <widget class="QLabel" name="label_4">
+   <widget class="QLabel" name="picLabel">
     <property name="geometry">
      <rect>
       <x>250</x>
-      <y>20</y>
+      <y>-40</y>
       <width>261</width>
-      <height>171</height>
+      <height>231</height>
      </rect>
     </property>
     <property name="font">
@@ -475,13 +495,13 @@ border-radius: 6px;
      <set>Qt::AlignmentFlag::AlignBottom|Qt::AlignmentFlag::AlignHCenter</set>
     </property>
    </widget>
-   <zorder>label_4</zorder>
-   <zorder>label_2</zorder>
+   <zorder>picLabel</zorder>
+   <zorder>parametrederecherchLink</zorder>
    <zorder>layoutWidget</zorder>
    <zorder>layoutWidget</zorder>
    <zorder>layoutWidget</zorder>
-   <zorder>label</zorder>
    <zorder>layoutWidget</zorder>
+   <zorder>soustitreLabel</zorder>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionRecherche_De_Livres">
