--- a/images.qrc
+++ b/images.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>../../../Downloads/Design sans titre.png</file>
+        <file>../../../Downloads/Design sans titre (1).png</file>
     </qresource>
 </RCC>
