--- a/accueilwindow.ui
+++ b/accueilwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
+    <width>959</width>
     <height>800</height>
    </rect>
   </property>
@@ -18,8 +18,8 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>2000</width>
-    <height>2000</height>
+    <width>959</width>
+    <height>800</height>
    </size>
   </property>
   <property name="cursor">
@@ -32,49 +32,10 @@
    <string notr="true">background-color: white;</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="parametrederecherchLink">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>270</y>
-      <width>167</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="maximumSize">
-     <size>
-      <width>200</width>
-      <height>30</height>
-     </size>
-    </property>
-    <property name="font">
-     <font>
-      <family>Arial</family>
-      <pointsize>11</pointsize>
-      <underline>true</underline>
-     </font>
-    </property>
-    <property name="cursor">
-     <cursorShape>PointingHandCursor</cursorShape>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QLabel{color:rgb(85, 166, 217);
-text-decoration :  underline dotted #656559;}
-QLabel:hover{color:rgb(0, 255, 127);
-text-decoration :  underline dotted black;}
-</string>
-    </property>
-    <property name="text">
-     <string>Paramètres de recherche</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignTop</set>
-    </property>
-   </widget>
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>590</x>
+      <x>750</x>
       <y>0</y>
       <width>201</width>
       <height>51</height>
@@ -171,6 +132,9 @@ QLabel:visited{
        <property name="contextMenuPolicy">
         <enum>Qt::ContextMenuPolicy::PreventContextMenu</enum>
        </property>
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(0, 255, 127);</string>
+       </property>
        <property name="text">
         <string/>
        </property>
@@ -186,14 +150,17 @@ QLabel:visited{
       </widget>
      </item>
     </layout>
+    <zorder>darkmodeBtn</zorder>
+    <zorder>addBookBtn</zorder>
+    <zorder>sidentifierLink</zorder>
    </widget>
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>9</x>
-      <y>310</y>
-      <width>781</width>
-      <height>461</height>
+      <x>10</x>
+      <y>360</y>
+      <width>941</width>
+      <height>411</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -305,7 +272,7 @@ QLabel:visited{
 font-weight: bold;
 background-color: rgb(85, 166, 217);
 border-radius: 0px;
-border: 2px solid white;
+border: 1px solid white;
 border-radius: 6px;}
 QPushButton:hover{
 background-color: rgb(85, 158, 217);
@@ -341,7 +308,7 @@ border: 1px solid #337ab7;
 	font: 14pt &quot;Arial&quot;;
 font-weight: bold;
 background-color: rgb(0, 236, 114);
-border: 2px solid white;
+border: 1px solid white;
 border-radius: 6px;}
 QPushButton:hover{
 background-color: rgb(0, 220, 114);
@@ -355,122 +322,13 @@ border: 1px solid #337ab7;
      </item>
     </layout>
    </widget>
-   <widget class="QLabel" name="soustitreLabel">
-    <property name="geometry">
-     <rect>
-      <x>270</x>
-      <y>150</y>
-      <width>257</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-      <bold>false</bold>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">color:rgb(109, 109, 109);</string>
-    </property>
-    <property name="text">
-     <string>Libre accès à la connaissance et à la culture.</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignmentFlag::AlignBottom|Qt::AlignmentFlag::AlignHCenter</set>
-    </property>
-   </widget>
-   <widget class="QWidget" name="layoutWidget">
-    <property name="geometry">
-     <rect>
-      <x>40</x>
-      <y>200</y>
-      <width>731</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,0">
-     <property name="spacing">
-      <number>0</number>
-     </property>
-     <property name="sizeConstraint">
-      <enum>QLayout::SizeConstraint::SetMinimumSize</enum>
-     </property>
-     <property name="topMargin">
-      <number>0</number>
-     </property>
-     <property name="rightMargin">
-      <number>0</number>
-     </property>
-     <property name="bottomMargin">
-      <number>0</number>
-     </property>
-     <item>
-      <widget class="QLineEdit" name="lineEdit">
-       <property name="maximumSize">
-        <size>
-         <width>500</width>
-         <height>45</height>
-        </size>
-       </property>
-       <property name="font">
-        <font>
-         <family>Arial</family>
-         <pointsize>14</pointsize>
-        </font>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QLineEdit:hover{
-color: black;
-background-color: white;
- border: 1px solid rgb(4, 170, 220);
-border-bottom: 2px  solid black;
-border-radius: 6px;
-}</string>
-       </property>
-       <property name="placeholderText">
-        <string>Recherche par titre, auteur, ISBN, éditeur, md5...</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="rechercheBtn">
-       <property name="maximumSize">
-        <size>
-         <width>150</width>
-         <height>50</height>
-        </size>
-       </property>
-       <property name="font">
-        <font>
-         <family>Arial</family>
-         <pointsize>12</pointsize>
-        </font>
-       </property>
-       <property name="cursor">
-        <cursorShape>PointingHandCursor</cursorShape>
-       </property>
-       <property name="contextMenuPolicy">
-        <enum>Qt::ContextMenuPolicy::DefaultContextMenu</enum>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QPushButton:hover{
-border-color: rgb(12, 223, 255);}</string>
-       </property>
-       <property name="text">
-        <string>Recherche</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </widget>
    <widget class="QLabel" name="picLabel">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>-40</y>
-      <width>261</width>
-      <height>231</height>
+      <x>360</x>
+      <y>0</y>
+      <width>221</width>
+      <height>201</height>
      </rect>
     </property>
     <property name="font">
@@ -495,13 +353,135 @@ border-color: rgb(12, 223, 255);}</string>
      <set>Qt::AlignmentFlag::AlignBottom|Qt::AlignmentFlag::AlignHCenter</set>
     </property>
    </widget>
+   <widget class="QWidget" name="layoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>210</y>
+      <width>701</width>
+      <height>111</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout_6">
+     <property name="spacing">
+      <number>0</number>
+     </property>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,0">
+       <property name="spacing">
+        <number>0</number>
+       </property>
+       <property name="sizeConstraint">
+        <enum>QLayout::SizeConstraint::SetMinimumSize</enum>
+       </property>
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>0</number>
+       </property>
+       <item>
+        <widget class="QLineEdit" name="lineEdit">
+         <property name="maximumSize">
+          <size>
+           <width>500</width>
+           <height>45</height>
+          </size>
+         </property>
+         <property name="font">
+          <font>
+           <family>Arial</family>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QLineEdit:hover{
+color: black;
+background-color: white;
+ border: 1px solid rgb(4, 170, 220);
+border-bottom: 2px  solid black;
+border-radius: 6px;
+}</string>
+         </property>
+         <property name="placeholderText">
+          <string>Recherche par titre, auteur, ISBN, éditeur, md5...</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="rechercheBtn">
+         <property name="maximumSize">
+          <size>
+           <width>150</width>
+           <height>50</height>
+          </size>
+         </property>
+         <property name="font">
+          <font>
+           <family>Arial</family>
+           <pointsize>12</pointsize>
+          </font>
+         </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
+         </property>
+         <property name="contextMenuPolicy">
+          <enum>Qt::ContextMenuPolicy::DefaultContextMenu</enum>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton:hover{
+border-color: rgb(12, 223, 255);}</string>
+         </property>
+         <property name="text">
+          <string>Recherche</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <widget class="QLabel" name="parametrederecherchLink">
+       <property name="maximumSize">
+        <size>
+         <width>200</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="font">
+        <font>
+         <family>Arial</family>
+         <pointsize>11</pointsize>
+         <underline>true</underline>
+        </font>
+       </property>
+       <property name="cursor">
+        <cursorShape>PointingHandCursor</cursorShape>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QLabel{color:rgb(85, 166, 217);
+text-decoration :  underline dotted #656559;}
+QLabel:hover{color:rgb(0, 255, 127);
+text-decoration :  underline dotted black;}
+</string>
+       </property>
+       <property name="text">
+        <string>Paramètres de recherche</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignmentFlag::AlignHCenter|Qt::AlignmentFlag::AlignTop</set>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
    <zorder>picLabel</zorder>
-   <zorder>parametrederecherchLink</zorder>
    <zorder>layoutWidget</zorder>
    <zorder>layoutWidget</zorder>
    <zorder>layoutWidget</zorder>
    <zorder>layoutWidget</zorder>
-   <zorder>soustitreLabel</zorder>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionRecherche_De_Livres">
