--- a/addbook.ui
+++ b/addbook.ui
@@ -48,7 +48,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>65</x>
@@ -59,7 +59,7 @@
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
-      <widget class="QLineEdit" name="lineEdit">
+      <widget class="QLineEdit" name="urllineEdit">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
          <horstretch>0</horstretch>
@@ -71,6 +71,12 @@
          <width>650</width>
          <height>36</height>
         </size>
+       </property>
+       <property name="font">
+        <font>
+         <family>Arial</family>
+         <pointsize>12</pointsize>
+        </font>
        </property>
       </widget>
      </item>
@@ -92,7 +98,7 @@
         <number>60</number>
        </property>
        <item>
-        <widget class="QPushButton" name="pushButton_3">
+        <widget class="QPushButton" name="parccourriBtn">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
            <horstretch>0</horstretch>
@@ -141,7 +147,7 @@ background-color: rgb(0, 230, 127);}</string>
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton">
+        <widget class="QPushButton" name="saveBtn">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
            <horstretch>0</horstretch>
@@ -194,12 +200,6 @@ background-color: rgb(0, 230, 127);}</string>
      </item>
     </layout>
    </widget>
-   <zorder>label</zorder>
-   <zorder>pushButton_2</zorder>
-   <zorder>label_2</zorder>
-   <zorder>lineEdit</zorder>
-   <zorder>pushButton_3</zorder>
-   <zorder></zorder>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
