--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -75,7 +75,7 @@ color: black;
       <enum>QLayout::SizeConstraint::SetDefaultConstraint</enum>
      </property>
      <item>
-      <widget class="QLineEdit" name="lineEdit_2">
+      <widget class="QLineEdit" name="courrielLineEdit">
        <property name="font">
         <font>
          <family>Arial</family>
@@ -95,7 +95,7 @@ color: black;
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="lineEdit">
+      <widget class="QLineEdit" name="passwordLineedit">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
          <horstretch>0</horstretch>
@@ -121,7 +121,7 @@ color: black;</string>
       </widget>
      </item>
      <item>
-      <widget class="QLabel" name="label_2">
+      <widget class="QLabel" name="msgMotdepasseLabel">
        <property name="enabled">
         <bool>true</bool>
        </property>
@@ -193,7 +193,7 @@ color: rgb(68, 68, 68); </string>
       </widget>
      </item>
      <item>
-      <widget class="QLabel" name="label_4">
+      <widget class="QLabel" name="msgIncorrectEmailLabel">
        <property name="maximumSize">
         <size>
          <width>16777215</width>
@@ -210,7 +210,7 @@ color: rgb(68, 68, 68); </string>
         <string notr="true">color: red;</string>
        </property>
        <property name="text">
-        <string>Incorrect email or password</string>
+        <string/>
        </property>
        <property name="alignment">
         <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignTop</set>
@@ -218,7 +218,7 @@ color: rgb(68, 68, 68); </string>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_2">
+      <widget class="QPushButton" name="sidentifierBtn">
        <property name="maximumSize">
         <size>
          <width>16777215</width>
@@ -302,7 +302,7 @@ border: 1px solid #337ab7;
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="creeuncompteBtn">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Maximum" vsizetype="Minimum">
          <horstretch>0</horstretch>
